# procesador_csv

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  start-app.sh
docs/: architecture.md  requirements.md
migrations/: env.py
migrations/versions/: c6b4a68c61ab_initial_migration.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  health.py  tasks.py  upload.py
src/application/: interfaces.py
src/application/use_cases/: get_task_status.py  process_chunk.py  upload_csv.py
src/domain/: entities.py  exceptions.py  ports.py  validation_rules.py  value_objects.py
src/infrastructure/celery/: config.py  tasks.py
src/infrastructure/config/: settings.py
src/infrastructure/db/: connection.py  models.py  repositories.py  uow.py
src/infrastructure/storage/: csv_mappers.py  local_file_storage.py
src/infrastructure/web/: dependencies.py  main.py
src/infrastructure/web/routers/: tasks.py  upload.py
src/tests/: conftest.py
src/tests/e2e/: test_api.py  test_full_flow.py
src/tests/integration/: test_celery_worker.py  test_repositories.py
src/tests/unit/: fakes.py  test_entities.py  test_local_file_storage.py  test_use_cases.py  test_validation_rules.py  test_value_objects.py  test_web_routers.py
